--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,5 +3,8 @@
   "references": [
     { "path": "./tsconfig.app.json" },
     { "path": "./tsconfig.node.json" }
-  ]
+  ],
+  "include": [
+   "types/app.ts" //include - exclude ( default )
+ ],
 }
